k8s/apps/jellyfin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: 8096
    - name: dlna
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
